<resources>
    <string name="categoria_produto2">Categoria: %1$s</string>
    <string name="preco_produto">Preço: %1$s</string>
    <string name="quantidade_produto">Quantidade: %1$d</string>
    <string name="validade_produto">Validade: %1$s</string>
    <string name="descricao_produto2">Descrição: %1$s</string>
    <string name="app_name">Nox Estoque</string>
    <string name="relat_rios">Relatórios</string>
    <string name="busca">Busca</string>
    <string name="produtos">Produtos</string>
    <string name="todo">TODO</string>
    <string name="novo_produto">Novo produto</string>
    <string name="controle_de_estoque">Controle de estoque</string>
    <string name="icone_login">TODO</string>
    <string name="no_products_message">Nenhum produto disponível</string>
    <string name="error_loading_products">Erro ao carregar produtos</string>
    <string name="produto">TODO</string>
    <string name="buscar">TODO</string>
    <string name="reportar">TODO</string>
    <string name="nome_do_produto">Nome do Produto</string>
    <string name="descricao_produto">Descrição do Produto</string>
    <string name="quantidade_0">Quantidade: 0</string>
    <string name="pre_o_r_0_00">Preço: 0.00</string>
    <string name="categoria_sem_categoria">Categoria: Sem categoria</string>
    <string name="validade_sem_validade">Validade: Sem validade</string>
    <string name="logo" />
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="nome_do_produto2">Nome do Produto</string>
    <string name="quantidade_do_produto">Quantidade do Produto</string>
    <string name="pre_o_do_produto">Preço do Produto</string>
    <string name="categoria_do_produto">Categoria do Produto</string>
    <string name="validade_do_produto">Validade do Produto</string>
    <string name="salvar_produto">Salvar Produto</string>
    <string name="logo1">Logo</string>
    <string name="salvar__produto">Salvar Produto</string>
    <string name="volta_tela_cadastror">voltar_tela_cadastro\n</string>
    <string name="nenhum_produto_cadastrado">Nenhum Produto Cadastrado\n</string>
    <string name="n_o_tem_cadastro_cadastre_se">Não tem cadastro? Cadastre-se</string>
    <string name="user_logo">user Logo</string>
    <string name="acesse_sua_conta">Acesse sua conta</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="login_com_google">Login com Google</string>
    <string name="google_login">Google Login</string>
    <string name="minimum_password">A senha deve ter pelo menos 6 caracteres</string>
    <string name="auth_failed">Falha na autenticação</string>
    <string name="your_web_client_id">153484113221-m1r88e1j11e9un8m9fv15ke5eu2dd5ve.apps.googleusercontent.com</string>
    <string name="Faça_Login_com">Faça login Com:</string>
    <string name="login_with_google">Login Com Google</string>
    <string name="logout">Logout</string>
    <string name="e_mail">E-mail</string>
    <string name="digite_seu_e_mail_para_recuperar_a_senha">Digite seu e-mail para recuperar a senha:</string>
    <string name="enviar">Enviar</string>
    <string name="produtos_cadastrados">Produtos Cadastrado</string>
    <string name="relat_rios_de_entradas_e_sa_das">Relatorios</string>
    <string name="motivo_opcional">Motivo(opcional)</string>
    <string name="quantidade3">Quantidade</string>
    <string name="entrada_de_produto">Entrada de Produto</string>
    <string name="sa_da">saida</string>
    <string name="entrada">entrada</string>
    <string name="produto2">Produto</string>
    <string name="tipo_de_opera_o">Tipo de Operação</string>
    <string name="quantidade">Quantidade</string>
    <string name="hor_rio">Hora</string>
    <string name="motivo">Motivo</string>
    <string name="relatorio_quantidade">Quantidade: %d</string>
    <string name="relatorio_horario">Hora: %s</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="novoUsuario">Novo Usuario</string>
    <string name="digite_seu_numero">Digite Seu Numero</string>
    <string name="emailCadastro">Email</string>
    <string name="numero">Numero</string>
    <string name="senhaCadastro">Senha</string>
    <string name="repita_senha">Repita Senha</string>
    <string name="digite_seu_email_aqui">Digita seu Email</string>
    <string name="digite_sua_senha">Digita sua Senha</string>
    <string name="repita_sua_senha">Repita sua Senha</string>
    <string name="back_arrow">Back_arroy </string>
    <string name="my_image_description" />
    <string name="baixar_relatorio">baixar relatorios</string>
    <string name="grafico_porc" />
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="definir_estoque_m_ximo">Definir Estoque Máximo</string>
    <string name="nome_do_produto_editar">Nome do Produto</string>
    <string name="digite_a_validade_do_produto">Digite a validade do produto</string>
    <string name="validade">Validade</string>
    <string name="estoque_m_ximo">Estoque Máximo</string>
    <string name="digite_o_estoque_m_ximo">Digite o estoque máximo</string>
    <string name="digite_o_nome_do_produto">Digite o nome do produto</string>
    <string name="Editar">Editar</string>
    <string name="digite_o_novo_estoque_m_ximo">Digite o novo estoque máximo:</string>
    <string name="estoque_m_ximo2">Estoque máximo</string>
    <string name="_0">0%</string>
    <string name="login_with_google_Cadastro">Login with google tela de cadastro</string>
    <string name="digite_o_nome_da_nova_categoria">Digite o nome da nova categoria</string>
    <string name="pr_visualiza_o_da_imagem">Pré-visualização da imagem</string>
    <string name="selecione_uma_categoria_ou_adicione_uma_nova_categoria">Selecione uma categoria ou adicione uma nova categoria</string>
    <string name="nome_da_categoria">Nome da Categoria</string>
    <string name="categorias">Categorias</string>
    <string name="produtos2">Produtos</string>
    <string name="voltar" />
    <string name="confirmar" >Confirmar</string>
    <string name="escolher_imagem">escolher imagem</string>
    <string name="cancelar">cancelar</string>
    <string name="limpar_filtro">Limpar Filtro</string>
    <string name="todofiltro">filtrar por data</string>
    <string name="editarcategoria" />
    <string name="excluircategoria" />
    <string name="edite_o_nome_da_categoria">edite o nome da categoria</string>
    <string name="carregando">Editando</string>
    <string name="categoria">Categoria</string>
    <string name="selecione_a_categoria" />
    <string name="logo_usuario">Logo_usuario</string>
    Categoria: Sem categoria
    <string name="categoria_produto">Categoria: Sem categoria</string>
    <string name="preco">Preço</string>
    <string name="digite_o_preco">Digite o preço</string>
    <string name="marca_do_produto">Marca do Produto</string>
    <string name="marca_produto">Marca: %s</string>
    <string name="digite_a_marca_do_produto">Digite a marca do produto</string>
    <string name="marca">Marca</string>
    <string name="digite_a_descri_o">Digite a Descrição</string>
    <string name="descri_o">Descrição</string>

</resources>
