<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/produto_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/produto2"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tipo_operacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_opera_o" />

    <TextView
        android:id="@+id/quantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantidade" />

    <TextView
        android:id="@+id/horario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hor_rio" />

    <TextView
        android:id="@+id/motivo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/motivo" />
</LinearLayout>
