<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/entrada_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrada_de_produto"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/entrada_quantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/quantidade3" />

    <EditText
        android:id="@+id/entrada_motivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/motivo_opcional"
        android:maxLength="20"/>

</LinearLayout>
