<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="#FFFFFF"
    tools:context="br.com.NoxEstoque.brasil.LoginActivity">

    <!-- Google Logo -->
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginBottom="24dp"
        android:contentDescription="@string/user_logo"
        android:src="@drawable/logo_usuario"
        />

    <!-- Título: Acesse sua conta -->
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acesse_sua_conta"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"/>

    <!-- Campo de texto para E-mail com ícone -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="12dp"

            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Campo de texto para Senha com ícone -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/senha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="12dp"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Botão de Login -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:layout_marginBottom="16dp"/>

    <!-- Esqueceu sua senha? -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esqueceu_sua_senha"
        android:textSize="14sp"
        android:textColor="#000"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onForgotPasswordClick"/>

    <!-- Login com Google -->
    <!-- Texto "Login com Google" -->
    <TextView
        android:id="@+id/google_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/Faça_Login_com"
        android:textColor="#000000"
        android:textSize="16sp" />

    <!-- Imagem clicável para Login com Google -->
    <ImageButton
        android:id="@+id/google_login_image"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/white"
        android:contentDescription="@string/login_with_google"
        android:src="@drawable/ic_google_logo"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"/>

    <!-- Texto "Não tem cadastro? Cadastre-se" -->


    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/n_o_tem_cadastro_cadastre_se"
        android:textSize="16sp"
        android:textColor="#000000"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onRegisterClick"/>


</LinearLayout>
