<!-- dialog_edit_product.xml -->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome_do_produto_editar"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/input_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_o_nome_do_produto"
            android:padding="12dp"
            android:background="@drawable/borda"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:maxLength="30"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/validade"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/input_validade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_a_validade_do_produto"
            android:padding="12dp"
            android:background="@drawable/borda"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estoque_m_ximo"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <EditText
            android:id="@+id/input_estoque_maximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/digite_o_estoque_m_ximo"
            android:padding="12dp"
            android:background="@drawable/borda"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:layout_marginBottom="16dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
