<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.NoxEstoque.brasil.MainActivity">

    <!-- Ícone de Perfil -->
    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/icone_login"
        android:src="@drawable/ic_user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Título: Controle de estoque -->
    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/controle_de_estoque"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp" />


    <!-- Gráfico Circular (PieChart Customizado) -->
    <org.eazegraph.lib.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/grafico_porc" />

    <!-- Texto da porcentagem dentro do gráfico de pizza -->
    <TextView
        android:id="@+id/piechart_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toTopOf="@id/piechart"
        app:layout_constraintBottom_toBottomOf="@id/piechart"
        app:layout_constraintStart_toStartOf="@id/piechart"
        app:layout_constraintEnd_toEndOf="@id/piechart"
        android:text="@string/_0" />
    <!-- RecyclerView para listar produtos -->

    <!-- Mensagem "Nenhum produto cadastrado" -->
    <!-- Mensagem "Nenhum produto cadastrado" -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_recycler_view"
        android:padding="7dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/new_product_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/piechart" />

    <TextView
        android:id="@+id/no_products_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nenhum_produto_cadastrado"
        android:textSize="18sp"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/piechart"
        app:layout_constraintBottom_toTopOf="@id/new_product_button" />
    <!-- Menu Inferior com Ícones -->
    <LinearLayout
        android:id="@+id/bottom_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Botão Produtos -->
        <LinearLayout
            android:id="@+id/produtos_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/produto"
                android:src="@drawable/ic_products" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/produtos"
                android:textSize="12sp" />
        </LinearLayout>

        <!-- Botão Relatórios -->
        <LinearLayout
            android:id="@+id/relatorio_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/reportar"
                android:src="@drawable/ic_reports" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relat_rios"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>

        <!-- Botão Busca -->
        <LinearLayout
            android:id="@+id/pesquisa_button"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/buscar"
                android:src="@drawable/ic_search" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/busca"
                android:textSize="12sp"
                android:gravity="center" />
        </LinearLayout>
    </LinearLayout>

    <!-- Botão Novo Produto -->
    <Button
        android:id="@+id/new_product_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/black"
        android:text="@string/novo_produto"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/bottom_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
         />

</androidx.constraintlayout.widget.ConstraintLayout>
